[package]
name = "n3twork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ed25519-dalek = { version = "2.1.0", features = ["serde", "rand_core", "signature", "alloc", "zeroize", "batch", "pkcs8", "pem", "digest"] }
etherparse = "0.13.0"
http = "1.0.0"
hyper = { version = "1.1.0", features = ["full"] }
iroh = { version = "0.12.0", features = ["ed25519-dalek"] }
pcap = { version = "1.2.0", features = ["all-features", "etherparse", "tokio", "tun-tap", "futures", "capture-stream", "lending-iter"] }
reqwest = { version = "0.11.23", features = ["json", "tokio-rustls", "stream"] }
ring = "0.17.7"
rustls = { version = "0.22.2", features = ["aws_lc_rs"] }
s2n-quic = { version = "1.32.0", features = ["s2n-quic-tls", "s2n-quic-rustls", "provider-event-tracing", "provider-tls-rustls", "provider-tls-s2n"] }
serde = { version = "1.0.195", features = ["derive", "alloc"] }
slab = { version = "0.4.9", features = ["serde"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
