[package]
name = "n3twork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
blake3 = { version = "1.5.0", features = ["rayon", "serde", "digest", "mmap"] }
bytes = { version = "1.5.0", features = ["serde"] }
chacha20poly1305 = { version = "0.10.1", features = ["stream", "alloc"] }
ed25519-dalek = { version = "2.1.0", features = ["serde", "rand_core", "signature", "alloc", "zeroize", "batch", "pkcs8", "pem", "digest"] }
x25519-dalek = { version = "2.0.0", features = ["serde", "alloc", "getrandom"] }
etherparse = "0.13.0"
hex-literal = "0.4.1"
http = "1.0.0"
ipnet = { version = "2.9.0", features = ["serde", "json"] }
rand_core = { version = "0.6.4", features = ["alloc", "getrandom", "serde"] }
ring = { version = "0.17.7", features = ["std"] }
rustls = { version = "0.22.2"}
rustls-pemfile = "2.0.0"
serde = { version = "1.0.195", features = ["derive", "alloc"] }
slab = { version = "0.4.9", features = ["serde"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
bitflags = { version = "2.4.2", features = ["serde"] }
sha3 = "0.10.8"
rustls-webpki = { version = "0.102.1"}
x509-parser = { version = "0.15.1", features = ["ring", "validate", "verify"] }
chrono = { version = "0.4.33", features = ["serde", "alloc"] }


[dev-dependencies]
reqwest = { version = "0.11.23", features = ["json", "tokio-rustls", "stream"] }

[features]
openssl = ["dep:openssl"]
